@@ -1,4 +1,9 @@
 0.2.7   xx-xxx-xxxx
+  o Remove the explicit palette set for the configuration dialog that
+    prevented the dialog from inheriting colors from the user's current
+    system theme. (Ticket #485. Patch from mkirk.)
+  o Clean up a couple status event messages related to dangerous port
+    warnings.
   o Change the vidalia_ru.nsh output encoding from KOI8-R to Windows-1251. 
     (Ticket #527)
 
